# f-tools

./: CLAUDE.md  README.md  f-tool-requirements.md  main.py  pyproject.toml
f_tool/: main.py
f_tool/commands/: __init__.py  backup.py  move.py
f_tool/ui/: i18n.py  progress.py  prompts.py
f_tool/utils/: filesystem.py
f_tools/: __init__.py  main.py
f_tools/commands/: __init__.py  copy.py  rename.py
f_tools/ui/: __init__.py
f_tools/utils/: __init__.py
