[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f-tools"
version = "0.1.0"
description = "Unified file operation CLI tool with auto-mkdir and progress display"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Boze", email = "your-email@example.com"},
]
keywords = ["cli", "file-operations", "move", "copy", "backup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "tqdm>=4.66.0",
    "send2trash>=1.8.0",
]

[project.scripts]
f-tools = "f_tools.main:main"

[project.urls]
Homepage = "https://github.com/boze46/f-tools"
Repository = "https://github.com/boze46/f-tools.git"
Issues = "https://github.com/boze46/f-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["f_tools"]
